testdata/asm/invalid/div_01.zkasm
;;error:4:12-13:unexpected target register
fn div(x u16, y u16) -> (q u16, r u16) {
  var w u16
  q, r, w, x = x / y
  return
}
